<resources>
    <string name="app_name">Senzer Room</string>
    <string name="defaultLabel">Room One</string>
    <string name="defaultLabel2">Room Two</string>
    <string name="defaultLabel3">Room Three</string>
    <string name="MenuItem">Admin Access(Login)</string>
    <string name="Settings1">Settings</string>
    <string name="title_activity_senz_admin_login">Sign in</string>
    <string name="textRoom">Room Number</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <item name="senzRoom" type="id"></item>
    <item name="textRoom" type="id"></item>
    <item name="roomAdder" type="id"></item>
    <string name="AdminLogin">Admin Login </string>
    <string name="Login">Login</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="attempts">Number of Incorrect Attempts: </string>
    <string name="senzerRoom">Senzer Room</string>
    <string name="TeamDiv">Team Diversity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="SenzPic">PictureSenz</string>
    <string name="title_activity_senz_room_data">SenzRoomData</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="Temp">The Temperature: </string>
    <string name="LightButton">Light Toggle</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="roomNumber">Number of Rooms</string>
    <string name="submit">Submit</string>
    <string name="NumberofRoom">Number</string>
    <string name="roomAmount">roomAmount</string>
    <string name="roomVacancy">Vacancy: </string>
    <string name="Time">Time: </string>
    <string name="Light">Light Reader: </string>
    <string name="LightOption">Light Option: </string>
    <string name="Registration">Registration</string>

    <string name="lightPurple">Light Purple</string>
    <string name="lightBlue">Light Blue</string>
    <string name="DarkBlue">Dark Blue(Default)</string>
    <string name="DarkTheme">Gray</string>

    <string name="RoomOccupied">Room is Occupied</string>
    <string name="RoomVacant">Room is Vacant</string>
    <string name="RoomTemp">Room Temperature: </string>
    <string name="Celsius"> Degrees Celsius</string>
    <string name="LightOn">Light is On</string>
    <string name="LightOff">Light is Off</string>
    <string name="Toggle">Toggle Light On/Off</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
