<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/appBackground">



    <TextView
        android:id="@+id/LightText"
        android:layout_width="242dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="117dp"
        android:text="@string/Light"
        android:textSize="18sp"
        tools:text="@string/Light" />

    <TextView
        android:id="@+id/OptionLight"
        android:layout_width="250dp"
        android:layout_height="57dp"
        android:layout_alignStart="@+id/switch1"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="223dp"
        android:text="@string/LightOption"
        android:textSize="18sp"
        tools:text="@string/LightOption" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="137dp"
        android:layout_height="44dp"
        android:layout_alignEnd="@+id/LightText"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="105dp"
        android:text="@string/Time"
        android:textSize="18sp" />
</RelativeLayout>